controllers/templates/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    l6p-app: kun-ui
  name: kun-ui
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    l6p-app: kun-ui
  type: ClusterIP
